main — SEGFAULT when using the native api