@@ -1,5 +1,3 @@
-import me.champeau.jmh.JmhBytecodeGeneratorTask
-
 plugins {
     id 'java'
     id 'me.champeau.jmh' version '0.6.8'
@@ -34,12 +32,20 @@ dependencies {
 jmh {
     iterations = 10
     benchmarkMode = ['avgt']
-    fork = 5
+    fork = 2
     failOnError = true
     forceGC = false
-    jvmArgs = ['--add-modules', 'jdk.incubator.vector']
     profilers = ['perfnorm']
-    jvmArgsAppend = ['--enable-preview', '--add-modules', 'jdk.incubator.vector']
+    jvmArgsAppend = [
+            '--enable-preview',
+            '--add-modules', 'jdk.incubator.vector',
+            //        '-XX:+UnlockDiagnosticVMOptions',
+            //        '-XX:+PrintCompilation',
+            //        '-XX:+PrintInlining',
+            //        '-XX:+PrintAssembly'
+            '-XX:UseSSE=0',
+            '-XX:UseAVX=0'
+    ]
     operationsPerInvocation = 10
     timeOnIteration = '1s'
     threads = 12
@@ -47,18 +53,22 @@ jmh {
     verbosity = 'NORMAL'
     warmup = '1s'
     warmupForks = 2
-    warmupIterations = 5
+    warmupIterations = 2
     warmupMode = 'INDI'
 }
 
 
 jmhRunBytecodeGenerator {
-    jvmArgs.add '--add-modules=jdk.incubator.vector'
+    jvmArgs.addAll '--add-modules', 'jdk.incubator.vector'
 }
 
 test {
-    minHeapSize = '128m'
-    maxHeapSize = '2G'
-    jvmArgs += ['--enable-preview', '--add-modules', 'jdk.incubator.vector']
+    jvmArgs += [
+            '--enable-preview',
+            '--add-modules', 'jdk.incubator.vector',
+            '--enable-native-access', 'ALL-UNNAMED'
+    ]
+
+    systemProperty 'java.library.path', '/usr/local/lib'
     useJUnitPlatform()
 }
